# ros2_ws

./: .gitignore  AGENTS.md  README.md  README.win.md  pyproject.toml
.claude/: settings.local.json
.codex/: gsd-file-manifest.json
.codex/agents/: gsd-debugger.md  gsd-debugger.toml  gsd-executor.md  gsd-executor.toml  gsd-phase-researcher.md  gsd-phase-researcher.toml  gsd-plan-checker.md  gsd-plan-checker.toml  gsd-planner.md  gsd-planner.toml  gsd-project-researcher.md  gsd-project-researcher.toml  gsd-research-synthesizer.md  gsd-research-synthesizer.toml  gsd-roadmapper.md  gsd-roadmapper.toml  gsd-ui-researcher.md  gsd-ui-researcher.toml  gsd-verifier.md  gsd-verifier.toml
.codex/get-shit-done/references/: decimal-phase-calculation.md  git-integration.md  git-planning-commit.md  model-profile-resolution.md  phase-argument-parsing.md  planning-config.md  verification-patterns.md
.codex/get-shit-done/templates/: phase-prompt.md
.codex/get-shit-done/workflows/: add-phase.md  add-tests.md  add-todo.md  audit-milestone.md  autonomous.md  check-todos.md  cleanup.md  complete-milestone.md  diagnose-issues.md  discovery-phase.md  discuss-phase.md  do.md  execute-phase.md  execute-plan.md  health.md  help.md  insert-phase.md  map-codebase.md  new-milestone.md  new-project.md  note.md  pause-work.md  plan-milestone-gaps.md  plan-phase.md  progress.md  quick.md  remove-phase.md  research-phase.md  resume-project.md  settings.md  transition.md  ui-phase.md  ui-review.md  update.md  validate-phase.md  verify-phase.md  verify-work.md
.codex/skills/gsd-add-phase/: SKILL.md
.codex/skills/gsd-add-tests/: SKILL.md
.codex/skills/gsd-add-todo/: SKILL.md
.codex/skills/gsd-audit-milestone/: SKILL.md
.codex/skills/gsd-autonomous/: SKILL.md
.codex/skills/gsd-check-todos/: SKILL.md
.codex/skills/gsd-cleanup/: SKILL.md
.codex/skills/gsd-complete-milestone/: SKILL.md
.codex/skills/gsd-debug/: SKILL.md
.codex/skills/gsd-discuss-phase/: SKILL.md
.codex/skills/gsd-do/: SKILL.md
.codex/skills/gsd-execute-phase/: SKILL.md
.codex/skills/gsd-health/: SKILL.md
.codex/skills/gsd-help/: SKILL.md
.codex/skills/gsd-insert-phase/: SKILL.md
.codex/skills/gsd-list-phase-assumptions/: SKILL.md
.codex/skills/gsd-map-codebase/: SKILL.md
.codex/skills/gsd-new-milestone/: SKILL.md
.codex/skills/gsd-new-project/: SKILL.md
.codex/skills/gsd-note/: SKILL.md
.codex/skills/gsd-pause-work/: SKILL.md
.codex/skills/gsd-plan-milestone-gaps/: SKILL.md
.codex/skills/gsd-plan-phase/: SKILL.md
.codex/skills/gsd-progress/: SKILL.md
.codex/skills/gsd-quick/: SKILL.md
.codex/skills/gsd-reapply-patches/: SKILL.md
.codex/skills/gsd-remove-phase/: SKILL.md
.codex/skills/gsd-research-phase/: SKILL.md
.codex/skills/gsd-resume-work/: SKILL.md
.codex/skills/gsd-set-profile/: SKILL.md
.codex/skills/gsd-settings/: SKILL.md
.codex/skills/gsd-stats/: SKILL.md
.codex/skills/gsd-ui-phase/: SKILL.md
.codex/skills/gsd-ui-review/: SKILL.md
.codex/skills/gsd-update/: SKILL.md
.codex/skills/gsd-validate-phase/: SKILL.md
.codex/skills/gsd-verify-work/: SKILL.md
src/cpp_parameters/: CMakeLists.txt  package.xml
src/cpp_parameters/src/: cpp_parameters_node.cpp
src/cpp_pubsub/: CMakeLists.txt  package.xml
src/cpp_pubsub/src/: subscriber_lambda_function.cpp
src/cpp_srvcli/: CMakeLists.txt  package.xml
src/cpp_srvcli/src/: add_two_ints_client.cpp
src/custom_action_cpp/: CMakeLists.txt  package.xml
src/custom_action_interfaces/: CMakeLists.txt  package.xml
src/custom_action_py/: package.xml  setup.py
src/imu_gps_localization/: CMakeLists.txt  package.xml
src/imu_gps_localization/imu_gps_localizer/: CMakeLists.txt
src/imu_gps_localization/imu_gps_localizer/include/imu_gps_localizer/: utils.h
src/imu_gps_localization/imu_gps_localizer/src/: gps_processor.cpp
src/imu_gps_localization/ros_wrapper/include/: localization_wrapper.h
src/imu_gps_localization/ros_wrapper/launch/: imu_gps_localization.launch.py
src/imu_gps_localization/ros_wrapper/src/: localization_node.cpp  localization_wrapper.cpp
src/more_interfaces/: CMakeLists.txt  package.xml
src/nmea_msgs/: CMakeLists.txt
src/nmea_navsat_driver/: package.xml
src/polygon_base/: CMakeLists.txt  package.xml
src/polygon_base/src/: area_node.cpp
src/polygon_plugins/: CMakeLists.txt  package.xml
src/py_pubsub/: package.xml  setup.py
src/py_srvcli/: package.xml  setup.py
src/python_parameters/: package.xml  setup.py
src/tutorial_interfaces/: CMakeLists.txt  package.xml
(+13 files in other folders)
