<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>imu_gps_localization</name>
  <version>0.0.0</version>
  <description>IMU/GPS loosely-coupled fusion localization using ESKF (ROS 2 Jazzy)</description>

  <maintainer email="yds@todo.todo">yds</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <build_depend>eigen3_cmake_module</build_depend>
  <build_depend>libgoogle-glog-dev</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
